added teams to index.js and updated swagger.json file
