# routes/index.js
@@ -3,6 +3,7 @@ const routes = express.Router();
 
 routes.use('/', require('./swagger'))
 routes.use('/players', require('./contacts'));
+routes.use('/teams', require('./contacts'));
 // routes.use(
 //     '/',
 //     (docData = (req, res) => {
